A.F....... [ZBX-1357] updated Brazilian Portuguese, Czech, Hungarian, Italian, Polish, Slovak and Russian translations; thanks to Zabbix translators (Richlv)
A.F....... [ZBXNEXT-1426] added initial Persian translation (Richlv)
A.F....... [ZBXNEXT-1447] added initial Finnish translation (Richlv)
........S. [ZBX-5525] renamed macro {TRIGGER.COMMENT} to {TRIGGER.DESCRIPTION} (Sasha)

Bug fixes:
..F....... [ZBX-5621] fixed custom trigger severities in user media configuration (Oleg)
..F....... [ZBX-5617] fixed class bug in triggers (Oleg)
A.F....... [ZBX-5046] fixed error message when delete globalmacro if macro doesn't exist (Oleg)
..F....... [ZBX-5595] Disabled "housekeeper" table updates when deleting a discovery rule or an item prototype (Oleg)
..F....... [ZBX-5596] Login form input field width fix (Oleg)
..F....... [ZBX-5629] fixed javascript error if user media contains doublequote (Oleg)
..F....... [ZBX-5580] fixed graphs grid for negative values (Oleg)
..F....... [ZBX-1825] fixed clickable text on popup menu headers (Oleg)
.D........ [ZBX-5582] clarified StartTrappers parameter in the server and proxy configuration files (Richlv)
..F....... [ZBX-4833] screens are now cloned correctly when full clone template (Vedmak)
..F....... [ZBX-5547] fixed server name and other parameters in frontend setup are not escaped (Vedmak)
..F....... [ZBX-3347] fixed error when create item with new application that already exists (Vedmak)
A......... [ZBX-3907] fixed api user.logout method (Vedmak)
..F....... [ZBX-4983] fixed import of 1.8 templates if they contain already existing host macros (Vedmak)
..F....... [ZBX-5579] in monitoring->triggers if trigger has no events, acknowledge column display 'no events' instead of 'Acknowledged' (Vedmak)
..F....... [ZBX-4247] fixed error when trigger expression items has same trigger expression like parameter in key (Vedmak)
..F....... [ZBX-5606] removed 'units' and 'store value' fields for character data items (Vedmak)